<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.example.recipeapp.models.RecipesViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/title_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".10"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:letterSpacing=".15"
            android:text="@string/recipes"
            android:textColor="#FFCDD2"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/title_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcoming_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/what_to_you_want_to_cook_today"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_guideline"
            app:layout_constraintWidth_percent=".7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/cards_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".3"
            app:layout_constraintTop_toTopOf="@id/title_guideline" />

        <EditText
            android:id="@+id/recipe_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@android:drawable/ic_menu_search"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:afterTextChanged="@{() -> viewModel.getRecipe()}"
            android:text="@={viewModel.recipeName}"
            android:textColor="@color/white"
            android:textColorHint="#9EFFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/cards_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcoming_text" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipes_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cards_guideline"
            tools:listitem="@layout/recipe_list_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
